@@ -4,6 +4,7 @@ Cacti CHANGELOG
 -issue#5768: Cacti does not properly escape Data Query indexes that include a space
 -issue#5772: Login log message unification - add client IP address
 -issue#5773: Update rrd.php missing variable $okpos
+-issue#5780: Undefined array key "default" in file html_form.php
 
 1.2.27
 -security#GHSA-37x7-mfjv-mm7m: Authentication Bypass when using using older password hashes
